# HNURM-radar-2026

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  SDK_REPLACEMENT_PLAN.md  bringup.sh  bringup_rosbag.sh  check_points.py  image_to_pcd.py  plan-of-improving-solution-of-identifying-ground-robots.md  pytest.ini  requirements.txt  ruff.toml  slam_guide.sh
configs/: HAP_config.json  README.md  bev_calib_lab.json  botsort.yaml  converter_config.yaml  converter_config_rosbag.yaml  detector_config.yaml  foxglove_layout.json  icp.rviz  main_config.yaml  perspective_calib.json  perspective_calib.json.bak  perspective_calib.json.bak2  rosbag_pointcloud.rviz
configs/archive/: bev_calib.json.bak  lab_control_points_example.json  lab_pcd_transform_info.json
configs/calibration/: bev_calib_lab.json  lab_map_alignment_info.json  lab_map_calib_points.json
data/: lab_pcds.pcd  pcds_downsampled.pcd
data/pointclouds/background/: background.pcd
data/pointclouds/registration/: lab_pcds_downsampled.pcd  map.pcd  map_downsample.pcd  pcds.pcd
data/weights/: README.md
data/weights/stage_one/: stage_one.pt
data/weights/stage_three/: stage_three.pt
data/weights/stage_two/: stage_two.pt
docs/: COORDINATE_TRANSFORM_GUIDE.md  DEPENDENCY_GUIDE.md  OPTIMIZATION_PLAN.md  PROJECT_STRUCTURE.md  RADAR_RULES_REFERENCE.md  README.md  SOURCE_CODE_GUIDE.md  USAGE_GUIDE.md
docs/api/: ros_topics.md
docs/architecture/: AIR_TARGET_INTEGRATION.md  system_overview.md
docs/guides/: AIR_SCHEME_GUIDE.md  CAMERA_SCHEME_GUIDE.md  CONFIG_AND_PATHS_GUIDE.md  LEARNING_ROADMAP.md  quickstart.md
plans/: interactive_extrinsic_adjustment.md
scripts/: air_param_grid_search.py  air_save_debug_pcd.py  air_visualize_clusters.py  align_pcd_with_map.py  benchmark_model.py  calibrate_bev_coords.py  calibrate_lab_map.py  derive_lidar_camera_extrinsic.py  derive_lidar_camera_extrinsic_from_homography.py  export_models.py  generate_rosbag_metadata.py  lidar_cam_projection_debug.py  lidar_collect_background.py  record_initial_pose.py  setup_assets.sh  test_yolo_3stage.py  validate_air_tracking_sequence.py
scripts/archive/: calibrate_bev_coords.py  prepare_lab_map.py  validate_pcd_alignment.py
src/Livox-SDK2/: CMakeLists.txt
src/Livox-SDK2/samples/: CMakeLists.txt
src/Livox-SDK2/sdk_core/: CMakeLists.txt
src/Quatro/: CMakeLists.txt  package.xml
src/detect_result/: CMakeLists.txt  package.xml
src/detect_result/msg/: DetectResult.msg  EkfDiagnostics.msg  EkfDiagnosticsArray.msg  Location.msg  Locations.msg  Robots.msg
src/ekf/: package.xml  setup.cfg  setup.py
src/ekf/ekf/: ekf_node.py
src/hnurm_bringup/: CMakeLists.txt  package.xml
src/hnurm_bringup/launch/: hnurm_air_launch.py  hnurm_radar_launch.py  hnurm_radar_video_launch.py  hnurm_rosbag_launch.py
src/hnurm_camera/params/: default.yaml
src/hnurm_camera/src/: Camera.cpp  camera_node.cpp
src/hnurm_radar/: package.xml  setup.cfg  setup.py
src/hnurm_radar/hnurm_radar/: camera_detector.py  detector_node.py  display_panel.py  judge_messager.py  lidar_node.py  publish_video.py  radar.py
src/hnurm_radar/hnurm_radar/Camera/: HKCam.py
src/hnurm_radar/hnurm_radar/Car/: Car.py
src/hnurm_radar/hnurm_radar/Lidar/: Converter.py  Lidar.py  PointCloud.py
src/hnurm_radar/hnurm_radar/air_scheme/: __init__.py  air_config.py  air_kalman_filter.py  air_target_node.py  background_subtractor.py  cluster_detector.py  point_cloud_processor.py  target_tracker.py
src/hnurm_radar/hnurm_radar/camera_locator/: anchor.py  make_mask.py  perspective_calibrator.py  point_picker.py
src/hnurm_radar/hnurm_radar/camera_scheme/: __init__.py  camera_detector.py  guess_pts.py  hungarian_tracker.py
src/hnurm_radar/hnurm_radar/communication/: __init__.py  _deprecated.py  judge_messager.py  referee_receiver.py  serial_protocol.py
src/hnurm_radar/hnurm_radar/core/: __init__.py  base_detector.py  base_tracker.py  sensor_interface.py
src/hnurm_radar/hnurm_radar/detection/: __init__.py  label_mappings.py  yolo_pipeline.py
src/hnurm_radar/hnurm_radar/filters/: __init__.py  bbox_kalman.py  kalman_filter.py
src/hnurm_radar/hnurm_radar/lidar_scheme/: __init__.py  detector_node.py  lidar_node.py  radar.py  tracker_enhanced.py
src/hnurm_radar/hnurm_radar/shared/: __init__.py  display_panel.py  judge_messager.py  paths.py  publish_video.py  type.py  utils.py
src/hnurm_radar/ultralytics/: PATCHES.md
src/livox_ros_driver2/: CMakeLists.txt  change2025_12_27.md
src/livox_ros_driver2/config/: HAP_config.json  (+2 more)
src/registration/: CMakeLists.txt  package.xml
src/registration/include/registration/: registration_node.hpp
src/registration/launch/: registration.launch.py
src/registration/params/: default.yaml
src/registration/src/: main.cpp  registration_node.cpp
tests/: conftest.py  test_label_mappings.py  test_paths.py  test_serial_protocol.py
(+10 files in other folders)
