<?xml version="1.0"?>

<package format="2">

  <name>quatro</name>
  <version>1.0.0</version>
  <description>quatro</description>

  <maintainer email="eungchang_mason@kaist.ac.kr">Eungchang Mason Lee</maintainer>
  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>

  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 基础依赖 -->
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>pcl</depend>
  <depend>teaserpp</depend>
  <depend>OpenMP</depend>
  
  <!-- TBB可选依赖 -->
  <build_depend>tbb</build_depend>

  <export>
  </export>

</package>