<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hnurm_radar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lisian_magic@163.com">lisian</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>

  <depend>example_interfaces</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
